cmake_minimum_required(VERSION 3.0.0)

project(pointer_based_list VERSION 0.1.0)
add_executable(pointer_based_list part2.0.cpp)

project(shared_based_list VERSION 0.1.0)
add_executable(shared_based_list  part2.1.cpp)

project(version_list VERSION 0.1.0)
add_executable(version_list  part2.2.cpp)

project(weak_ptr_list VERSION 0.1.0)
add_executable(weak_ptr_list  part2.3.cpp)
